gitops/platform-apps/dashy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`admin.__ZONE_NAME__`)
      services:
        - kind: Service
          name: dashy
          port: 80
  tls: {}
